# multi-qwen3-agent

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  DOCUMENTATION_STATUS.md  Makefile  PROTOTYPE_CHECKLIST.md  QWEN_STANDARDS.md  RAG_INTEGRATION_SUMMARY.md  RAG_QUICK_REFERENCE.md  RAG_WORKFLOW.md  README.md  SETUP_STANDARDS.md  UNIFIED_RAG_SYSTEM.md  ingest_local_docs.py  ingest_qwen_agent_readme.py  production-pyproject.toml  production-requirements.txt  pyproject.toml  rag_hub.py
.github/: copilot-instructions.md
.github/workflows/: enforce-standards.yml
docs/: ACTION_PLAN.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_STATUS.md  MODEL_SELECTION_GUIDE.md  Production-README.md  QWEN_GUI_SETUP.md
docs/patterns/: CONVERSATION_PATTERNS.md  RAG_PATTERNS.md
examples/: local_vector_rag_example.py  qwen3-agentV2-complete.py  qwen_rag_agent.py  run_qwen_alltools_cli.py  run_qwen_alltools_gui.py  run_qwen_gui.py  unified_rag_demo.py  web_to_vector_ingestion.py
production/: LOCAL_VECTOR_SEARCH_README.md  PHASE2_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT_ARCHIVED.md  __init__.py  agent.py  cli.py  config.py  pipeline.py  pyproject.toml  tools.py
production/qwen_pipeline/: __init__.py  agent.py  cli.py  config.py  ingest_cli.py  metrics.py  pipeline.py  query_helper.py  tools.py  tools_custom.py  tools_github.py  unified_ingestion.py  web_rag_ingestion.py
production/tests/: test_agent.py  test_agent_env.py  test_cli.py  test_config.py  test_e2e.py  test_integration.py  test_metrics.py  test_pipeline.py  test_pipeline_streaming.py  test_pipeline_structured.py  test_pipeline_timeout.py  test_tools.py  test_tools_custom.py  test_tools_exceptions.py  test_tools_github.py  test_vector_persistence.py  test_web_rag_ingestion.py
rag_workspace/: __init__.py
