[project]
name = "qwenagent-best"
version = "0.1.0"
description = "Consolidated multi-agent AI system built on Qwen-Agent framework"
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "MIT" }
authors = [
    { name = "QwenAgent-Best Team" }
]
keywords = ["LLM", "Agent", "Multi-Agent", "Qwen", "Ollama", "HITL"]

dependencies = [
    # Core Qwen-Agent with essential features
    "qwen-agent[code_interpreter]==0.0.31",

    # Official minimal dependencies (already included in qwen-agent)
    # dashscope>=1.11.0
    # eval_type_backport
    # json5
    # jsonlines
    # jsonschema
    # openai
    # pydantic>=2.3.0
    # requests
    # tiktoken
    # pillow
    # dotenv

    # Safe code evaluation (production security)
    "asteval>=0.9.28",

    # Structured logging
    "structlog>=23.1.0",

    # Optional monitoring
    "sentry-sdk>=1.30.0",
]

[project.optional-dependencies]
# Development tools
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "bandit>=1.7.5",
    "pre-commit>=3.4.0",
]

# GUI support with EXACT versions from official repo
gui = [
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "gradio==5.23.1",
    "gradio-client==1.8.0",
    "modelscope_studio==1.1.7",
]

# Examples with custom tools
examples = [
    "duckduckgo-search>=3.8.5",
]

# Full installation (all features)
all = [
    "qwenagent-best[dev,gui,examples]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["production"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "examples",
    "production/tests",
    "production/*.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["production/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=qwen_pipeline",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["production/qwen_pipeline"]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = []

[tool.bandit.assert_used]
exclude = ["*_test.py", "test_*.py"]
